# roadmaps-generator

./: .gitignore  README.md  compose.yaml  pyproject.toml
docs/: convention.md  epics.md  steps_checklist.md
docs/agent/: agent.md
docs/db/: db_design.md  draft.md
prisma/: schema.prisma
src/: dev_agent.ipynb  main.py
src/models/: __init__.py  roadmap_model.py  step_model.py  step_skill_model.py  user_model.py
src/repositories/: user_repository.py
src/utils/: config.py
test/: test_db_seed.ipynb  test_seeddb.py
test/dump/: dump_data.py
